--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "App.js",
   "scripts": {
     "start": "node App.js",
-    "dev":"nodemon App.js"
+    "dev": "nodemon App.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "nodeman": "^1.1.2",
     "nodemon": "^2.0.20"
   }
 }
