--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "App.js",
   "scripts": {
     "start": "node App.js",
-    "dev":"nodemon App.js"
+    "dev": "nodemon App.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "nodemon": "^2.0.20"
   }
 }
