--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expense-express",
   "version": "1.0.0",
-  "description": "",
+  "description": "So we nearly finishing the bootcamp 🎉.This will be creating a blog application for our final project which will incorporate alot of things we have learnt so far and alot of new concepts. For this project the main features for the API will include as follows:",
   "main": "App.js",
   "scripts": {
     "start": "node App.js",
@@ -12,11 +12,23 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cloudinary": "^1.34.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "nodemon": "^2.0.20"
-  }
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fikrcamp/blog-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fikrcamp/blog-api/issues"
+  },
+  "homepage": "https://github.com/fikrcamp/blog-api#readme"
 }
