--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
+    "cors": "^2.8.5",
     "dcrypt": "^0.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "nodeman": "^1.1.2",
     "nodemon": "^2.0.20"
