--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DB=mongodb+srv://Buushe4:buushe1234@cluster0.yt1zdbx.mongodb.net/?retryWrites=true&w=majority
+DB= mongodb+srv://Buushe4:buushe1234@cluster0.yt1zdbx.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=buushes
+CLOUDINARY_NAME = buushe
+CLOUDINARY_API_KEY = 731912744248313
+CLOUDINARY_API_SECRET = F-9KJWO8zA2QTg38vxJiNbNuwjM
